# pyeasydeploy

./: .gitignore  pyproject.toml  readme.md
pyeasydeploy/: __init__.py  packages.py  python.py  supervisor.py  transfer.py  venv.py
